# NeuralGrasp_sim2real_project

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml  requirements.txt  test_replay_buffer.py  train.py
configs/: README.md
docs/: ERROR_CATCH.md  INSTALL.md  README.md
scripts/: README.md  train_and_eval_w_geo.sh  train_and_eval_w_geo_dyna.sh  train_and_eval_w_geo_sem.sh  train_and_eval_w_geo_sem_dyna.sh  train_policy.py
src/: __init__.py
src/networks/: __init__.py  flow_matching_policy.py
src/real_robot/: __init__.py
src/simulation/: __init__.py  splatsim_wrapper.py
submodules/gaussian-splatting-wrapper/gaussian_splatting/scene/: __init__.py  gaussian_model.py
submodules/gaussian-splatting-wrapper/gaussian_splatting/submodules/diff-gaussian-rasterization/: pyproject.toml  setup.py
submodules/gaussian-splatting-wrapper/gaussian_splatting/submodules/diff-gaussian-rasterization/cuda_rasterizer/: rasterizer_impl.h
submodules/gaussian-splatting-wrapper/gaussian_splatting/utils/: camera_utils.py
tests/: __init__.py
