[project]
name = "neuralgrasp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e3nn==0.5.6",
    "einops==0.8.1",
    "gymnasium>=1.2.3",
    "numpy<2",
    "open3d==0.18.0",
    "openai>=2.28.0",
    "packaging>=26.0",
    "plyfile==1.1.2",
    "pybullet==3.2.7",
    "pyyaml>=6.0.3",
    "torch==1.13.1+cu116",
    "torchaudio==0.13.1",
    "torchvision==0.14.1+cu116",
    "tqdm==4.67.1",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu116"
url = "https://download.pytorch.org/whl/cu116"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu116" }
torchvision = { index = "pytorch-cu116" }
torchaudio = { index = "pytorch-cu116" }
